testdata/golden/sema/valid/concurrency/task_returned_async_block.fmt
// Valid: Task awaited in async block (proper structured concurrency)

async fn work() -> int {
    return 42;
}

// Direct await in async block - all tasks awaited
pub async fn test_await_in_async_block() -> int {
    let result = async {
        let t = spawn work();
        return compare t.await() {
            Success(v) => v;
            Cancelled() => 0;
        };
    };
    return compare result.await() {
        Success(v) => v;
        Cancelled() => 0;
    };
}

// Nested async blocks with proper awaiting
pub async fn test_nested_async() -> int {
    let outer = async {
        let inner = async {
            let t = spawn work();
            return compare t.await() {
                Success(v) => v;
                Cancelled() => 0;
            };
        };
        return compare inner.await() {
            Success(v) => v;
            Cancelled() => 0;
        };
    };
    return compare outer.await() {
        Success(v) => v;
        Cancelled() => 0;
    };
}
