testdata/golden/sema/invalid/concurrency/task_not_awaited_fn.fmt
// ERROR: Task leaked from function scope (not async block)

async fn work() -> int {
    return 42;
}

pub fn test_fn_scope_leak() {
    let t = task work();
    // ERROR SEM3107: task is neither awaited nor returned
}
